--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,5 +1,7 @@
 pt-BR:
   users:
+    confirmation:
+      sucess: Email confirmado com sucesso, obrigado!
     new:
       title: Cadastro
     edit:
@@ -9,6 +11,14 @@ pt-BR:
       location: "Localização: %{location}"
       bio: "Bio: %{bio}"
       edit: 'Editar Perfil'
+
+  signup_mailer:
+    confirm_email:
+      subject: 'Colcho.net - Confirme seu email'
+      title: Seja bem vindo ao Colcho.net!
+      body: "Seja bem vindo ao Colcho.net, %{full_name}. O Colcho.net é o lugar ideal para você alugar aquele quarto sobrando na sua casa e ainda conhecer gente do mundo inteiro."
+      confirm_link_html: "Para você começar a usar o site, acesse o link: %{link}"
+      thanks_html: "Obrigado por se cadastrar no %{link}."
 
   links:
     back: Voltar
