--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -35,6 +35,7 @@ pt-BR:
     new_room: Cadastre seu Quarto!
     my_profile: Meu Perfil
     signout: Sair
+    ola: Ola Mundo
 
     general:
       form_error: Há errors no formulario, por favor verifique.
