--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -59,16 +59,27 @@ pt-BR:
         title: Título
 
 
-      activemodel:
+  activemodel:
+    attributes:
+      user_sessions:
+        email: Email
+        password: Senha
+    erros:
+      user_session:
         attributes:
-          user_sessions:
-            email: Email
-            password: Senha
-        erros:
-          messages:
+          base:
             invalid_login: Usuário ou senha inválidos
+      messages:
+        invalid_login: Usuário ou senha inválidos
 
-      helpers:
-        submit:
-          user_session:
-            create: Entrar
+  helpers:
+    submit:
+      user_session:
+        create: Entrar
+
+  flash:
+    notice:
+      signed_in: 'Login efetuado com sucesso!'
+      signed_out: 'Logout efetuado com sucesso. Até logo!'
+    alert:
+      needs_login: 'Para continuar, você precisa estar logado'
