--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -77,6 +77,17 @@ pt-BR:
       user_session:
         create: Entrar
 
+  dialogs:
+    destroy: 'Você tem certeza que quer remover?'
+
+  rooms:
+    index:
+      title: 'Quartos disponíveis'
+    room:
+      owner_html: '&mdash; %{owner} (%{when})'
+      edit: 'Editar'
+      destroy: 'Remover'
+
   flash:
     notice:
       signed_in: 'Login efetuado com sucesso!'
