--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -87,6 +87,8 @@ pt-BR:
       owner_html: '&mdash; %{owner} (%{when})'
       edit: 'Editar'
       destroy: 'Remover'
+    review:
+      login_to_review: 'Faça o login para avaliar quartos'
 
   flash:
     notice:
