--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -89,6 +89,10 @@ pt-BR:
       destroy: 'Remover'
     review:
       login_to_review: 'Faça o login para avaliar quartos'
+      stats:
+        zero: 'Não há avaliações'
+        one: '%{average}/%{max} (1 avaliação)'
+        other: '%{average}/%{max} (%{count} avaliações)'
 
   flash:
     notice:
