--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,4 +1,11 @@
 pt-BR:
+  views:
+    pagination:
+      first: "&laquo; Primeira"
+      last: "Última &raquo"
+      previous: "&lsaquo; Anterior"
+      next: "Próxima &rsaquo"
+      truncate: "..."
   users:
     confirmation:
       sucess: Email confirmado com sucesso, obrigado!
@@ -52,13 +59,12 @@ pt-BR:
         location: Localização
         password: Senha
         password-confirmation: Confirme sua senha
-
       room:
         description: descrição
         location: localização
         title: Título
-
-
+        picture: Foto
+    
   activemodel:
     attributes:
       user_sessions:
@@ -83,6 +89,9 @@ pt-BR:
   rooms:
     index:
       title: 'Quartos disponíveis'
+      search_results: 'Resultados da busca'
+    search:
+      search_for: 'Buscar por...'
     room:
       owner_html: '&mdash; %{owner} (%{when})'
       edit: 'Editar'
@@ -90,9 +99,8 @@ pt-BR:
     review:
       login_to_review: 'Faça o login para avaliar quartos'
       stats:
-        zero: 'Não há avaliações'
-        one: '%{average}/%{max} (1 avaliação)'
-        other: '%{average}/%{max} (%{count} avaliações)'
+        one: '(1 avaliação)'
+        other: '(%{count} avaliações)'
 
   flash:
     notice:
